# ycli

./: .gitignore  Cargo.toml  sample-config.yaml
src/: lib.rs  main.rs
src/cli/: cmd_tree.rs  line_reader.rs  mod.rs
src/command_tree/: mod.rs  node.rs
src/schema/: interface-ethernet.yaml  interface-layer3.yaml  interface-openvpn.yaml
